refactored controller and spec file
